Fix sidebar collapsed size on hover

--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -45,7 +45,57 @@
     }
 
     & .sidebar-wrapper {
-      padding-top: 43px;
+      display: flex;
+      flex-direction: column;
+
+      & .list-menu {
+        margin-top: 30px;
+      }
+
+      & .list-menu.hovered {
+        position: absolute;
+
+        flex: 1;
+
+        padding-bottom: 30px;
+
+        height: calc(100vh - 100px);
+        width: 260px;
+
+        background: $dark;
+
+        overflow-y: auto;
+
+        // &,
+        // & > li:first-child a,
+        // & > li:first-child a .right-container {
+        //   border-top-right-radius: 4px !important;
+        // }
+
+        & .tree {
+          height: unset !important;
+
+          & li.tree-item {
+            padding: 0;
+          }
+        }
+
+        & span,
+        & .right-container i {
+          display: block;
+        }
+      }
+
+      & li a {
+        &:not(.active) {
+          background: $dark;
+        }
+
+        & span,
+        & .right-container i {
+          display: none;
+        }
+      }
 
       & li.has-children {
         .tree {
@@ -93,7 +143,7 @@
       }
     }
 
-    animation: sidebar-expanded .6s 1 forwards;
+    animation: sidebar-expanded 0.6s 1 forwards;
 
     @keyframes sidebar-expanded {
       0% {
@@ -158,7 +208,7 @@
     color: $light;
 
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
 
     & .list-menu {
       list-style-type: none;
@@ -317,7 +367,7 @@
 
       & .sidebar-header,
       & .sidebar-wrapper {
-        animation: sidebar-collapsed-mobile .7s 1 forwards;
+        animation: sidebar-collapsed-mobile 0.7s 1 forwards;
 
         & .brand {
           animation: unset;
